# memory-demos

./: .gitignore  README.md  demo1_client.cpp  demo1_server.cpp  demo2_client.cpp  demo2_server.cpp  demo3a_client.cpp  demo3a_client_register_time.cpp  demo3a_client_throughput.cpp  demo3a_server.cpp  demo3b_client1.cpp  demo3b_client2.cpp  demo3b_server.cpp  dockerfile
demo4a/: CMakeLists.txt
demo4a/proto/allocator/: allocator.proto
demo4a/scripts/: proto-gen.sh
demo4a/src/: client.cpp  server.cpp
demo4b/: CMakeLists.txt
demo4b/scripts/: proto-gen.sh
demo4b/src/: c2  client.cpp  client2.cpp
demo5/: CMakeLists.txt
demo5/proto/allocator/: allocator.proto
demo5/src/: client.cpp  server.cpp  test  test_server.cpp
